Change global button text

--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -27,7 +27,7 @@
     {{#ifHaveBlindRolls TOTAL_BLIND_ROLL_COUNT}}
     <div>
         <h2 class="blind-roll-heading">There Are {{TOTAL_BLIND_ROLL_COUNT}} Blind rolls between all players</h2>
-        <button type="button" data-action="pushBlindRolls">Push Blind Rolls to Player Data</button>
+        <button type="button" data-action="pushBlindRolls">Push Player Blind Rolls to Graph</button>
     </div>
     <br>
     {{/ifHaveBlindRolls}}
