--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -447,7 +447,7 @@
         
         {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[8]}}
         {{#ifDieUsed TOTAL_ROLLS.[8] }}
-        <h1>D-100 Stats</h1>
+        <h1 class="dice-type-title">D-100 Stats</h1>
         <div id = "d100ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
