--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -341,7 +341,7 @@
         
         {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[8]}}
         {{#ifDieUsed TOTAL_ROLLS.[8] }}
-        <h1>D-100 Stats</h1>
+        <h1 class="dice-type-title">D-100 Stats</h1>
         <div id = "d100Chart" class="chart-dice-stats"></div>
         <table>
             <tr>
