Mix median spelling

--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -69,7 +69,7 @@
                 <td>{{MEAN.[0]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[0]}}</th>
             </tr>
             <tr>
@@ -120,7 +120,7 @@
                 <td>{{MEAN.[1]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[1]}}</th>
             </tr>
             <tr>
@@ -171,7 +171,7 @@
                 <td>{{MEAN.[2]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[2]}}</th>
             </tr>
             <tr>
@@ -222,7 +222,7 @@
                 <td>{{MEAN.[3]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[3]}}</th>
             </tr>
             <tr>
@@ -273,7 +273,7 @@
                 <td>{{MEAN.[4]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[4]}}</th>
             </tr>
             <tr>
@@ -324,7 +324,7 @@
                 <td>{{MEAN.[5]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[5]}}</th>
             </tr>
             <tr>
@@ -375,7 +375,7 @@
                 <td>{{MEAN.[6]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[6]}}</th>
             </tr>
             <tr>
@@ -426,7 +426,7 @@
                 <td>{{MEAN.[7]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[7]}}</th>
             </tr>
             <tr>
@@ -477,7 +477,7 @@
                 <td>{{MEAN.[8]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[8]}}</th>
             </tr>
             <tr>
