--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -46,7 +46,7 @@
                 <td>{{MEAN.[0]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[0]}}</th>
             </tr>
             <tr>
@@ -85,7 +85,7 @@
                 <td>{{MEAN.[1]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[1]}}</th>
             </tr>
             <tr>
@@ -124,7 +124,7 @@
                 <td>{{MEAN.[2]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[2]}}</th>
             </tr>
             <tr>
@@ -163,7 +163,7 @@
                 <td>{{MEAN.[3]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[3]}}</th>
             </tr>
             <tr>
@@ -201,7 +201,7 @@
                 <td>{{MEAN.[4]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[4]}}</th>
             </tr>
             <tr>
@@ -239,7 +239,7 @@
                 <td>{{MEAN.[5]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[5]}}</th>
             </tr>
             <tr>
@@ -277,7 +277,7 @@
                 <td>{{MEAN.[6]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[6]}}</th>
             </tr>
             <tr>
@@ -315,7 +315,7 @@
                 <td>{{MEAN.[7]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[7]}}</th>
             </tr>
             <tr>
@@ -353,7 +353,7 @@
                 <td>{{MEAN.[8]}}</th>
             </tr>
             <tr>
-                <td>Meadian (Middle Number)</th>
+                <td>Median (Middle Number)</th>
                 <td>{{MEDIAN.[8]}}</th>
             </tr>
             <tr>
