--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -46,17 +46,17 @@
                 <td>{{MEAN.[0]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[0]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[0]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[0]}}     <!--Associated helper in main-->
                     {{#ifHaveStreak STREAK.[0]}}    <!--Associated helper in main-->
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[0]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -85,17 +85,17 @@
                 <td>{{MEAN.[1]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[1]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[1]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[1]}}
                     {{#ifHaveStreak STREAK.[1]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[1]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -124,17 +124,17 @@
                 <td>{{MEAN.[2]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[2]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[2]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[2]}}
                     {{#ifHaveStreak STREAK.[2]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[2]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -163,17 +163,17 @@
                 <td>{{MEAN.[3]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[3]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[3]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[3]}}
                     {{#ifHaveStreak STREAK.[3]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[3]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -201,17 +201,17 @@
                 <td>{{MEAN.[4]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[4]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[4]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[4]}}
                     {{#ifHaveStreak STREAK.[4]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[4]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -239,17 +239,17 @@
                 <td>{{MEAN.[5]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[5]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[5]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[5]}}
                     {{#ifHaveStreak STREAK.[5]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[5]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -277,17 +277,17 @@
                 <td>{{MEAN.[6]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[6]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[6]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[6]}}
                     {{#ifHaveStreak STREAK.[6]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[6]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -315,17 +315,17 @@
                 <td>{{MEAN.[7]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[7]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[7]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[7]}}
                     {{#ifHaveStreak STREAK.[7]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[7]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
@@ -353,17 +353,17 @@
                 <td>{{MEAN.[8]}}</th>
             </tr>
             <tr>
-                <td>Median (Middle Number)</th>
+                <td>Median (Middle Number):</th>
                 <td>{{MEDIAN.[8]}}</th>
             </tr>
             <tr>
-                <td>Mode (Most Common)</th>
+                <td>Mode (Most Common):</th>
                 <td>{{MODE.[8]}}</th>
             </tr>
             <tr>
                 {{#ifStreakIsBlind S_IS_B.[8]}}
                     {{#ifHaveStreak STREAK.[8]}}
-                        <td>Streak Data:</td>
+                        <td>Streak Data (Sequential incrementing rolls):</td>
                         <td>{{STREAK.[8]}}</td> 
                     {{else}}
                         <td>No Streak was made</td>
