--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -78,7 +78,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[0]}} <!-- Associated Helper in Main -->
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[0]}}</b> with a streak of: <b>{{STREAK.[0]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[0]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[0]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}             
@@ -129,7 +130,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[1]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[1]}}</b> with a streak of: <b>{{STREAK.[1]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[1]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[1]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}             
@@ -180,7 +182,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[2]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[2]}}</b> with a streak of: <b>{{STREAK.[2]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[2]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[2]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}             
@@ -231,7 +234,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[3]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[3]}}</b> with a streak of: <b>{{STREAK.[3]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[3]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[3]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}             
@@ -282,7 +286,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[4]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[4]}}</b> with a streak of: <b>{{STREAK.[4]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[4]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[4]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}            
@@ -333,7 +338,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[5]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[5]}}</b> with a streak of: <b>{{STREAK.[5]}}</b><td>
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[5]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[5]}}</td>
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}             
@@ -384,7 +390,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[6]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[6]}}</b> with a streak of: <b>{{STREAK.[6]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[6]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[6]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}             
@@ -435,7 +442,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[7]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[7]}}</b> with a streak of: <b>{{STREAK.[7]}}</b><td> 
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[7]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[7]}}</td> 
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}           
@@ -486,7 +494,8 @@
             </tr>
             <tr>
                 {{#ifHaveStreak STREAK.[8]}}
-                    <td>Longest Streak is <b>{{STREAK_PLAYER.[8]}}</b> with a streak of: <b>{{STREAK.[8]}}</b><td>
+                    <td>Longest Streak is <b>{{STREAK_PLAYER.[8]}}</b> (Sequential incrementing rolls):</td>
+                    <td>{{STREAK.[8]}}</td>
                 {{else}}
                     <td>No Streak was made</td>
                 {{/ifHaveStreak}}        
