--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -378,7 +378,7 @@
 
         <br>
         <div>
-            <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.player_data_form.refresh_btn"}}</button>
+            <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>
         </div>
     </div>
 
