--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -11,29 +11,29 @@
 
     <!-- Example of using en.json values <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
     <div class="form-checkboxes">
-        <input type="checkbox" class="form-checkboxes" data-action="d2checkbox"     {{{isChecked IS_DIE_DISPLAYED.[0]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d2"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d3checkbox"    {{{isChecked IS_DIE_DISPLAYED.[1]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d3"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d4checkbox"     {{{isChecked IS_DIE_DISPLAYED.[2]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d4"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d6checkbox"    {{{isChecked IS_DIE_DISPLAYED.[3]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d6"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d8checkbox"    {{{isChecked IS_DIE_DISPLAYED.[4]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d8"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d10checkbox"    {{{isChecked IS_DIE_DISPLAYED.[5]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d10"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d12checkbox"    {{{isChecked IS_DIE_DISPLAYED.[6]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d12"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d20checkbox"    {{{isChecked IS_DIE_DISPLAYED.[7]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d20"}}</span></input>
-        <input type="checkbox" class="form-checkboxes" data-action="d100checkbox"    {{{isChecked IS_DIE_DISPLAYED.[8]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d100"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d2checkbox"     {{{diceStats_IsChecked IS_DIE_DISPLAYED.[0]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d2"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d3checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[1]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d3"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d4checkbox"     {{{diceStats_IsChecked IS_DIE_DISPLAYED.[2]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d4"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d6checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[3]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d6"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d8checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[4]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d8"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d10checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[5]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d10"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d12checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[6]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d12"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d20checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[7]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d20"}}</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d100checkbox"    {{{diceStats_IsChecked IS_DIE_DISPLAYED.[8]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d100"}}</span></input>
     </div>
     <br>
-    {{#ifHaveBlindRolls BLIND_ROLL_COUNT}}
+    {{#diceStats_ifHaveBlindRolls BLIND_ROLL_COUNT}}
     <div class="blind-roll-rollcount">
         <h2>{{localize "DICE_STATS_TEXT.player_data_form.blind_rolls" ui_rolls=BLIND_ROLL_COUNT }}</h2>
     </div>
     <br>
-    {{/ifHaveBlindRolls}}
+    {{/diceStats_ifHaveBlindRolls}}
 
     <div class="col">
         <h1 class="dice-type-title"> {{PLAYER_NAME}} {{localize "DICE_STATS_TEXT.player_data_form.player_name"}}</h1>
         <br>
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[0]}}
-        {{#ifDieUsed TOTAL_ROLLS.[0] }} <!-- Associated Helper in Main -->
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[0]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[0] }} <!-- Associated Helper in Main -->
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d2"}}</h1>
         <div id = "d2Chart" class="chart-dice-stats"></div>
         <table>
@@ -54,25 +54,25 @@
                 <td>{{MODE.[0]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[0]}}     <!--Associated helper in main-->
-                    {{#ifHaveStreak STREAK.[0]}}    <!--Associated helper in main-->
+                {{#diceStats_ifStreakIsBlind S_IS_B.[0]}}     <!--Associated helper in main-->
+                    {{#diceStats_ifHaveStreak STREAK.[0]}}    <!--Associated helper in main-->
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[0]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
 
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[1]}}
-        {{#ifDieUsed TOTAL_ROLLS.[1] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[1]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[1] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d3"}}</h1>
         <div id = "d3Chart" class="chart-dice-stats"></div>
         <table>
@@ -93,25 +93,25 @@
                 <td>{{MODE.[1]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[1]}}  
-                    {{#ifHaveStreak STREAK.[1]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[1]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[1]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[1]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[2]}}
-        {{#ifDieUsed TOTAL_ROLLS.[2] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[2]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[2] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d4"}}</h1>
         <div id = "d4Chart" class="chart-dice-stats"></div>
         <table>
@@ -132,25 +132,25 @@
                 <td>{{MODE.[2]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[2]}}  
-                    {{#ifHaveStreak STREAK.[2]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[2]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[2]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[2]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[3]}}
-        {{#ifDieUsed TOTAL_ROLLS.[3] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[3]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[3] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d6"}}</h1>
         <div id = "d6Chart" class="chart-dice-stats"></div>
         <table>
@@ -171,24 +171,24 @@
                 <td>{{MODE.[3]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[3]}}  
-                    {{#ifHaveStreak STREAK.[3]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[3]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[3]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[3]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[4]}}
-        {{#ifDieUsed TOTAL_ROLLS.[4] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[4]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[4] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d8"}}</h1>
         <div id = "d8Chart" class="chart-dice-stats"></div>
         <table>
@@ -209,24 +209,24 @@
                 <td>{{MODE.[4]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[4]}}  
-                    {{#ifHaveStreak STREAK.[4]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[4]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[4]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[4]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[5]}}
-        {{#ifDieUsed TOTAL_ROLLS.[5] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[5]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[5] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d10"}}</h1>
         <div id = "d10Chart" class="chart-dice-stats"></div>
         <table>
@@ -247,24 +247,24 @@
                 <td>{{MODE.[5]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[5]}}  
-                    {{#ifHaveStreak STREAK.[5]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[5]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[5]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[5]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[6]}}
-        {{#ifDieUsed TOTAL_ROLLS.[6] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[6]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[6] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d12"}}</h1>
         <div id = "d12Chart" class="chart-dice-stats"></div>
         <table>
@@ -285,24 +285,24 @@
                 <td>{{MODE.[6]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[6]}}  
-                    {{#ifHaveStreak STREAK.[6]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[6]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[6]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[6]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[7]}}
-        {{#ifDieUsed TOTAL_ROLLS.[7] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[7]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[7] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d20"}}</h1>
         <div id = "d20Chart" class="chart-dice-stats"></div>
         <table>
@@ -323,24 +323,24 @@
                 <td>{{MODE.[7]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[7]}}  
-                    {{#ifHaveStreak STREAK.[7]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[7]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[7]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[7]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
         <br>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
         
-        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[8]}}
-        {{#ifDieUsed TOTAL_ROLLS.[8] }}
+        {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[8]}}
+        {{#diceStats_ifDieUsed TOTAL_ROLLS.[8] }}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d100"}}</h1>
         <div id = "d100Chart" class="chart-dice-stats"></div>
         <table>
@@ -361,20 +361,20 @@
                 <td>{{MODE.[8]}}</th>
             </tr>
             <tr>
-                {{#ifStreakIsBlind S_IS_B.[8]}}  
-                    {{#ifHaveStreak STREAK.[8]}}  
+                {{#diceStats_ifStreakIsBlind S_IS_B.[8]}}  
+                    {{#diceStats_ifHaveStreak STREAK.[8]}}  
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.streak"}}</td>
                         <td>{{STREAK.[8]}}</td> 
                     {{else}}
                         <td>{{localize "DICE_STATS_TEXT.player_data_form.no_streak"}}</td>
-                    {{/ifHaveStreak}}
+                    {{/diceStats_ifHaveStreak}}
                 {{else}}
                     <td>{{localize "DICE_STATS_TEXT.player_data_form.streak_blind"}}</td>
-                {{/ifStreakIsBlind}}
+                {{/diceStats_ifStreakIsBlind}}
             </tr>
         </table>
-        {{/ifDieUsed}}
-        {{/ifDisplayDieInfo}}
+        {{/diceStats_ifDieUsed}}
+        {{/diceStats_ifDisplayDieInfo}}
 
         <br>
         <div>
