--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -28,12 +28,6 @@
     <div>
         <h2 class="blind-roll-heading">{{localize "DICE_STATS_TEXT.global_data_form.blind_rolls" ui_rollcount=TOTAL_BLIND_ROLL_COUNT}}</h2>
         <button type="button" data-action="pushBlindRolls">{{localize "DICE_STATS_TEXT.global_data_form.blind_roll_btn"}}</button>
-        <button type="button" data-action="clearRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_roll_data_btn"}}</button>
-    </div>
-    <br>
-    {{else}}
-    <div>
-        <button type="button" data-action="clearRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_roll_data_btn"}}</button>
     </div>
     <br>
     {{/diceStats_ifHaveBlindRolls}}
@@ -493,6 +487,10 @@
         {{/diceStats_ifDisplayDieInfo}}
         <div>
             <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>
+            {{#diceStats_ifIsGM}}
+            <br>
+            <button type="button" data-action="clearRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_roll_data_btn"}}</button>
+            {{/diceStats_ifIsGM}}
         </div>
     </div>
 
