Add constructor and cdb creation

--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -490,6 +490,8 @@
             {{#diceStats_ifIsGM}}
             <br>
             <button type="button" data-action="clearRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_roll_data_btn"}}</button>
+            <br>
+            <button type="button" data-action="clearDB">{{localize "DICE_STATS_TEXT.global_data_form.clear_db_btn"}}</button>
             {{/diceStats_ifIsGM}}
         </div>
     </div>
