--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -385,7 +385,7 @@
             <button type="button" data-action="save">{{localize "DICE_STATS_TEXT.player_data_form.save_data_btn"}}</button>
             <h1></h1>
             <br>
-            <button type="button" data-action="load">{{localize "DICE_STATS_TEXT.player_data_form.load__data_btn"}}</button>
+            <button type="button" data-action="load">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn"}}</button>
             {{/diceStats_ifIsMe}}
         </div>
     </div>
