--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -381,7 +381,7 @@
             <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>
             {{#diceStats_ifIsMe PLAYER_NAME}}
             <br>
-            <h1>{{localize "DICE_STATS_TEXT.player_data_form.db_interact"}}</h1>
+            <h3 class="db-interaction-heading">{{localize "DICE_STATS_TEXT.player_data_form.db_interact"}}</h3>
             <table>
                 <tr>
                     <td>
