--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -65,3 +65,8 @@ button.blind-roll-rollcount{
     margin: auto;
     text-align: center;
 }
+
+.db-interaction-heading{
+    margin: auto;
+    text-align: center;
+}
