Add different DB load options

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -378,16 +378,13 @@
 
         <br>
         <div>
-            
+            <tr>   
+                <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>    
+            </tr>
             {{#diceStats_ifIsMe PLAYER_NAME}}
             <br>
-            <h4 class="db-interaction-heading">{{localize "DICE_STATS_TEXT.player_data_form.db_interact"}}</h4>
+            <h4 class="db-interaction-heading"></h4>
             <table>
-                <tr>
-                    <td>
-                        <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>
-                    </td>
-                </tr>
                 <tr>
                     <td>
                         <button type="button" data-action="clearAllLocalRollData">Clear Your Locally Stored Data</button>
@@ -401,12 +398,18 @@
                         <button type="button" data-action="save">{{localize "DICE_STATS_TEXT.player_data_form.save_data_btn"}}</button>
                     </td>
                     <td>
-                        <button type="button" data-action="load">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn"}}</button>
+                        <button type="button" data-action="loadAllFromDB">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn"}}</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" data-action="loadYoursFromDB">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn_yours"}}</button>
+                    </td>
+                    <td>
+                        <button type="button" data-action="loadOthersFromDB">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn_others"}}</button>
                     </td>
                 </tr>
             </table>
-            {{else}}
-            <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>
             {{/diceStats_ifIsMe}}
         </div>
     </div>
