--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -387,10 +387,10 @@
             <table>
                 <tr>
                     <td>
-                        <button type="button" data-action="clearAllLocalRollData">Clear Your Locally Stored Data</button>
+                        <button type="button" data-action="clearAllLocalRollData">Clear ALL locally stored data</button>
                     </td>
                     <td>
-                        <button type="button" data-action="clearYourLocalRollData">Clear All Locally Stored Data</button>
+                        <button type="button" data-action="clearYourLocalRollData">Clear YOUR locally stored data</button>
                     </td>
                 </tr>
                 <tr>
