--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -387,10 +387,10 @@
             <table>
                 <tr>
                     <td>
-                        <button type="button" data-action="clearAllLocalRollData">Clear ALL locally stored data</button>
+                        <button type="button" data-action="clearAllLocalRollData">{{localize "DICE_STATS_TEXT.player_data_form.clear_all_local_data_btn"}}</button>
                     </td>
                     <td>
-                        <button type="button" data-action="clearYourLocalRollData">Clear YOUR locally stored data</button>
+                        <button type="button" data-action="clearYourLocalRollData">{{localize "DICE_STATS_TEXT.player_data_form.clear_my_local_data_btn"}}</button>
                     </td>
                 </tr>
                 <tr>
