Start button change for autoDB funtionality

--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -486,6 +486,11 @@
         {{/diceStats_ifDieUsed}}
         {{/diceStats_ifDisplayDieInfo}}
         <div>
+            //TODO
+            {{#diceStats_ifAutoDbActive AUTO_DB_ACTIVE}}
+            {{else}}
+            {{/diceStats_ifAutoDbActive}}
+
             {{#diceStats_ifIsGM}}
             <table>
                 <tr>
