--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -377,6 +377,13 @@
         {{/diceStats_ifDisplayDieInfo}}
 
         <br>
+
+        //TODO
+            {{#diceStats_ifAutoDbActive AUTO_DB_ACTIVE}}
+            {{else}}
+            {{/diceStats_ifAutoDbActive}}
+
+            {{#diceStats_ifIsGM}}
         <div>
             <tr>   
                 <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>    
