Fix Clear Button from global

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -400,6 +400,9 @@
                             <td>
                                 <button type="button" data-action="save">{{localize "DICE_STATS_TEXT.player_data_form.save_data_btn"}}</button>
                             </td>
+                            <td>
+                                <button type="button" data-action="clearAllPlayerData">Clear Local And DB</button>
+                            </td>
                         </tr>
                     </table>
                 {{else}}
