Localize values for buttons

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -401,7 +401,7 @@
                                 <button type="button" data-action="save">{{localize "DICE_STATS_TEXT.player_data_form.save_data_btn"}}</button>
                             </td>
                             <td>
-                                <button type="button" data-action="clearAllPlayerData">Clear Local And DB</button>
+                                <button type="button" data-action="clearAllPlayerData">{{localize "DICE_STATS_TEXT.player_data_form.clear_your_both"}}</button>
                             </td>
                         </tr>
                     </table>
