Update Global data

--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -493,7 +493,15 @@
                         <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>
                     </td>
                     <td>
-                        <button type="button" data-action="clearRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_roll_data_btn"}}</button>
+                        <button type="button" data-action="clearAllRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_all_btn"}}</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" data-action="clearAllLocalRollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_all_local_btn"}}</button>
+                    </td>
+                    <td>
+                        <button type="button" data-action="clearAllDBrollData">{{localize "DICE_STATS_TEXT.global_data_form.clear_all_db_btn"}}</button>
                     </td>
                 </tr>
             </table>
