Update buttons for AutoSave feature

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -433,6 +433,14 @@
                                 <button type="button" data-action="loadYoursFromDB">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn_yours"}}</button>
                             </td>
                         </tr>
+                        <tr>
+                            <td>
+                                <button type="button" data-action="clearYourDBrollData">{{localize "DICE_STATS_TEXT.player_data_form.clear_my_db_info"}}</button>
+                            </td>
+                            <td>
+                                <button type="button" data-action="clearAllPlayerData">{{localize "DICE_STATS_TEXT.player_data_form.clear_your_both"}}</button>
+                            </td>
+                        </tr>
                     </table>
                 {{/diceStats_ifAutoDbActive}}
             
