Add feature to force load DB values, Add fix for loading null DB values

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -405,6 +405,8 @@
                             </td>
                         </tr>
                     </table>
+                    <button type="button" data-action="loadAllFromDB">{{localize "DICE_STATS_TEXT.player_data_form.load_data_btn"}}</button>
+                            
                 {{else}}
                     <br>
                     <h4 class="db-interaction-heading"></h4>
