--- a/templates/dice-stats-compare.hbs
+++ b/templates/dice-stats-compare.hbs
@@ -11,14 +11,13 @@
 
     <!-- Example of using en.json values <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
     <!-- [(name, id, isCheked), (name, isChecked), (name, isCheked)...] -->
-    <div class="player-checkboxes">
+    <!-- Player Checkboxes -->
+    <div class="center-checkboxes">
         {{#each PLAYERS_SELECTED}} 
-            <input type="checkbox" class="player-checkboxes" data-action="{{{this.id}}}" {{{diceStats_IsChecked this.isChecked}}}><span class="form-checkboxes">{{this.name}}</span></input>
+            <input type="checkbox" class="form-checkboxes" data-action="{{{this.id}}}" {{{diceStats_IsChecked this.isChecked}}}><span class="form-checkboxes">{{this.name}}</span></input>
         {{/each}} 
-        <br>
-        
     </div>
-    <br>
+    <h1></h1>
     <!-- Checkboxes to choose if you want a graph hidden -->
     <div class="form-checkboxes">
         <input type="checkbox" class="form-checkboxes" data-action="d2checkbox"     {{{diceStats_IsChecked IS_DIE_DISPLAYED.[0]}}}><span class="form-checkboxes">{{localize "DICE_STATS_TEXT.both_forms.checkboxes.d2"}}</span></input>
