--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -20,7 +20,7 @@
 
 .chart-dice-stats{
     background: transparent;
-    width: 600px; 
+    width: auto; 
     height: 300px; 
     margin-top: 0;
     margin-left: 0;
