start hbs tab pages

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -378,6 +378,7 @@
 
         <br>
             
+        <!-- Buttons table -->
         <div>
             <tr>   
                 <button type="button" data-action="refresh">{{localize "DICE_STATS_TEXT.both_forms.refresh_btn"}}</button>    
