--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -12,7 +12,7 @@
         }
     -->
 
-    {{#diceStats_ifDieUsed D20_TYPES_TOTAL_ROLLS.[0] }} <!-- if Have D20 ATK Rolls -->
+    {{#diceStats_ifDieUsed TOTAL_ROLLS.[7] }} <!-- if Have D20 ATK Rolls -->
         <h1 class="dice-type-title">D20 Atack Rolls</h1>
         <div id = "d20AtkChart" class="chart-dice-stats"></div>
         <table> <!-- Table Of Rolled Stats -->
@@ -36,7 +36,7 @@
         <br>
     {{/diceStats_ifDieUsed}}
 
-    {{#diceStats_ifDieUsed D20_TYPES_TOTAL_ROLLS.[1] }} <!-- if Have D20 ATK Rolls -->
+    {{#diceStats_ifDieUsed TOTAL_ROLLS.[7] }} <!-- if Have D20 ATK Rolls -->
         <h1 class="dice-type-title">D20 Damage Rolls</h1>
         <div id = "d20DmgChart" class="chart-dice-stats"></div>
         <table> <!-- Table Of Rolled Stats -->
@@ -60,7 +60,7 @@
         <br>
     {{/diceStats_ifDieUsed}}
 
-    {{#diceStats_ifDieUsed D20_TYPES_TOTAL_ROLLS.[2] }} <!-- if Have D20 ATK Rolls -->
+    {{#diceStats_ifDieUsed TOTAL_ROLLS.[7] }} <!-- if Have D20 ATK Rolls -->
         <h1 class="dice-type-title">D20 Save Rolls</h1>
         <div id = "d20SaveChart" class="chart-dice-stats"></div>
         <table> <!-- Table Of Rolled Stats -->
@@ -84,7 +84,7 @@
         <br>
     {{/diceStats_ifDieUsed}}
 
-    {{#diceStats_ifDieUsed D20_TYPES_TOTAL_ROLLS.[3] }} <!-- if Have D20 ATK Rolls -->
+    {{#diceStats_ifDieUsed TOTAL_ROLLS.[7] }} <!-- if Have D20 ATK Rolls -->
         <h1 class="dice-type-title">D20 Skill Rolls</h1>
         <div id = "d20SkillChart" class="chart-dice-stats"></div>
         <table> <!-- Table Of Rolled Stats -->
@@ -108,7 +108,7 @@
         <br>
     {{/diceStats_ifDieUsed}}
 
-    {{#diceStats_ifDieUsed D20_TYPES_TOTAL_ROLLS.[4] }} <!-- if Have D20 ATK Rolls -->
+    {{#diceStats_ifDieUsed TOTAL_ROLLS.[7] }} <!-- if Have D20 ATK Rolls -->
         <h1 class="dice-type-title">D20 Unknown Rolls</h1>
         <div id = "d20UnknownChart" class="chart-dice-stats"></div>
         <table> <!-- Table Of Rolled Stats -->
